[package]
name = "mango-pickle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mango_pickle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
solana-program = "^1.9.6"
anchor-spl = "0.24.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
mango = {path= "../../../mango-v3/program", features=["no-entrypoint"]}
mango-macro = { path = "../../../mango-v3/mango-macro" }
mango-common = { path = "../../../mango-v3/common" }
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
fixed-macro = "^1.1.1"
